# opengl-playground

./: .gitmodules  CMakeLists.txt
CMake/: cotire.cmake
resources/shaders/: one.frag  one.vert  specular.frag
resources/textures/: container2.xcf  fish-specular.dds  fish-specular.xcf  fish.xcf
shaders/: lamp.frag  one.frag  one.vert
src/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  context.cpp  context.hpp  main.cpp  shader.cpp  shader.hpp
textures/: container.dds  container2-specular.dds  container2.dds  container2.xcf  fish-specular.dds  fish-specular.xcf  fish.dds  fish.xcf
