cmake_minimum_required (VERSION 2.8.12)
project(opengl-playground)
find_package(PkgConfig)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
include(cotire)

if( CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR )
    message( FATAL_ERROR "Please select another Build Directory.)" )
endif()
if( CMAKE_SOURCE_DIR MATCHES " " )
	message( "Your Source Directory contains spaces." )
endif()
if( CMAKE_BINARY_DIR MATCHES " " )
	message( "Your Build Directory contains spaces." )
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -std=gnu++11")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -O2")

find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
find_package(Boost COMPONENTS filesystem REQUIRED)
pkg_search_module(SDL2 REQUIRED sdl2)
set(INCLUDE_DIRS ${Boost_INCLUDE_DIR} "${CMAKE_SOURCE_DIR}/SOIL2/src/SOIL2" "${CMAKE_SOURCE_DIR}/glm" ${SDL2_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS})
set(LIBRARIES ${SDL2_LIBRARIES} ${GLEW_LIBRARIES} ${Boost_LIBRARIES} ${OPENGL_LIBRARIES})

file(GLOB_RECURSE resources shaders/* textures/*)
file(GLOB_RECURSE sources src/*.cpp src/*.h SOIL2/src/SOIL2/*.c SOIL2/src/SOIL2/*.h)

foreach(resource ${resources})
  configure_file(${resource} resources COPYONLY)
endforeach(resource)

add_executable(main ${sources} ${resources})
target_link_libraries(main ${LIBRARIES})
target_include_directories(main PUBLIC ${INCLUDE_DIRS})
cotire(main)
